--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-auth": "^4.0.5",
     "node-sass-watcher": "^0.5.1",
     "react": "^17.0.2",
+    "react-collapsed": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "recoil": "^0.5.2"
